--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -138,6 +138,7 @@
 .searchBtn {
   background: red;
   width: 20%;
+  cursor: pointer;
 }
 .searchBtn:hover {
   background: rgba(135, 135, 135, 0.079);
@@ -219,7 +220,7 @@
 }
 
 .propPhotosContainer {
-  background: rgba(0, 0, 0, 0.182);
+  /* background: rgba(0, 0, 0, 0.182); */
   width: 100%;
   height: 75%;
 }
@@ -243,13 +244,13 @@
 .superHost {
   margin: 3%;
   padding: 1%;
-  height: 5%;
+  height: 15%;
   width: 20%;
   border-radius: 10px;
   border: 1px solid rgb(117, 116, 116);
   text-align: center;
   color: rgb(89, 88, 88);
-  font-size: 100%;
+  font-size: 90%;
 }
 
 @media (min-width: 1790px) {
@@ -291,6 +292,7 @@
 .superHostHeading {
   margin-top: 0;
   font-family: sans-serif;
+  font-size: 80%;
 }
 .propDescriptions {
   padding-left: 2%;
@@ -311,11 +313,11 @@
 .type {
   font-weight: 200;
   color: rgb(117, 117, 117);
-  width: 45%;
+  width: 70%;
   height: 50%;
   margin-top: 4%;
   margin-left: 2%;
-  font-size: 110%;
+  font-size: 100%;
 }
 .ratingIcon {
   margin-right: 5px;
@@ -325,7 +327,8 @@
 }
 .ratingsContainer {
   display: flex;
-  margin-right: 3%;
+  margin-right: 0%;
+  padding-right: 1%;
 }
 .rate {
   font-size: 120%;
@@ -414,6 +417,8 @@
   text-align: left;
   margin-left: 5%;
   margin-top: -3%;
+  color: rgb(113, 113, 113);
+  font-weight: normal;
 }
 .guestOptions {
   display: inline-block;
@@ -478,6 +483,30 @@
 .locationFiller:hover {
   border: 1px solid black;
 }
+.parentOfModal {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.modal-dialog {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.modal-content {
+  margin: 500px;
+}
+#modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  margin-top: 200px;
+}
 .hidden {
+  /* background: black; */
   display: none;
+}
+.show {
+  display: block;
 }
