--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -156,6 +156,11 @@
   border: 0px solid black;
   background: white;
 }
+@media (max-width: 1600px) {
+  .searchBar {
+    width: 35%;
+  }
+}
 .searchBar button:first-child {
   border-right: 0.25px solid gray;
 }
@@ -229,6 +234,7 @@
   height: 100%;
   object-fit: cover;
   border-radius: 30px;
+  cursor: pointer;
 }
 .fullPropSectionContainer {
   padding-left: 5%;
@@ -244,7 +250,7 @@
 .superHost {
   margin: 3%;
   padding: 1%;
-  height: 15%;
+  height: 10%;
   width: 20%;
   border-radius: 10px;
   border: 1px solid rgb(117, 116, 116);
@@ -292,7 +298,7 @@
 .superHostHeading {
   margin-top: 0;
   font-family: sans-serif;
-  font-size: 80%;
+  font-size: 100%;
 }
 .propDescriptions {
   padding-left: 2%;
@@ -317,7 +323,7 @@
   height: 50%;
   margin-top: 4%;
   margin-left: 2%;
-  font-size: 100%;
+  font-size: 120%;
 }
 .ratingIcon {
   margin-right: 5px;
@@ -353,6 +359,38 @@
   top: 0;
   z-index: 1;
 }
+.propertyModal {
+  position: sticky;
+  top: 15%;
+  left: 30%;
+  width: 40%;
+  height: 35%;
+  border-radius: 20px;
+  z-index: 1;
+  overflow: auto;
+  background-color: white;
+  box-shadow: 0 5px rgba(0, 0, 0, 0.182);
+}
+.propertyModalBackground {
+  width: 100%;
+  height: 200%;
+  position: absolute;
+  top: 0;
+  background: rgba(0, 0, 0, 0.408);
+  z-index: 1;
+}
+.propertyModalPicture {
+  width: 100%;
+  height: 100%;
+  /* overflow: hidden;
+  object-fit: cover; */
+}
+
+.propertyModalImg {
+  height: 100%;
+  width: 100%;
+}
+/* FIXME:FIXME:FIXME:FIXME:FIXME: */
 .searchFields {
   width: 90%;
   margin: 3% 5%;
@@ -416,7 +454,7 @@
   font-size: 20px;
   text-align: left;
   margin-left: 5%;
-  margin-top: -3%;
+  margin-top: -2%;
   color: rgb(113, 113, 113);
   font-weight: normal;
 }
@@ -488,14 +526,7 @@
   top: 0;
   left: 0;
 }
-.modal-dialog {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.modal-content {
-  margin: 500px;
-}
+
 #modal {
   position: absolute;
   top: 0;
